added friendship system with recommending albums to friends and chatting
